fix component spacing

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,8 @@
     transform: rotate(360deg);
   }
 }
+
+.py4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
